Adding more Sample class